name:                language-plutus-napkin
version:             0.1.0.0
synopsis:            Language library for Plutus Napkin
description:         Pretty-printer, parser, and typechecker for Plutus Napkin.
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2018 Input Output
category:            Language
build-type:          Simple
extra-doc-files:     README.md
extra-source-files:  stack.yaml
                   , cabal.project.local
cabal-version:       1.18

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

library
  hs-source-dirs:      src
  exposed-modules:     Language.PlutusNapkin
                     , Language.PlutusNapkin.Type
  build-depends:       base >= 4.3 && < 5
                     , bytestring
  default-language:    Haskell2010
  if flag(development)
    ghc-options:       -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Wnoncanonical-monad-instances
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  ghc-options:         -Wall

test-suite language-plutus-napkin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , language-plutus-napkin
                     , tasty
                     , hedgehog
                     , tasty-hedgehog
  if flag(development)
    ghc-options:       -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Wnoncanonical-monad-instances
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

benchmark language-plutus-napkin-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , language-plutus-napkin
                     , criterion
  if flag(development)
    ghc-options:       -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Wnoncanonical-monad-instances
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-prototype
