cabal-version: 1.18
name: language-plutus-napkin
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2018 Input Output
maintainer: vanessa.mchale@iohk.io
author: Vanessa McHale
synopsis: Language library for Plutus Napkin
description:
    Pretty-printer, parser, and typechecker for Plutus Napkin.
category: Language
build-type: Simple
extra-source-files:
    stack.yaml
    cabal.project.local
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus-prototype

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
    exposed-modules:
        Language.PlutusNapkin
    build-tools: alex -any, happy >=1.17.1
    hs-source-dirs: src
    other-modules:
        Language.PlutusNapkin.Type
        Language.PlutusNapkin.Identifier
        Language.PlutusNapkin.Lexer
        Language.PlutusNapkin.Parser
        Language.PlutusNapkin.PrettyPrint
    default-language: Haskell2010
    other-extensions: CPP MagicHash DeriveGeneric DeriveAnyClass
                      StandaloneDeriving GeneralizedNewtypeDeriving
    ghc-options: -Wall -Wincomplete-uni-patterns
                 -Wincomplete-record-updates -Wredundant-constraints
                 -Wnoncanonical-monad-instances
    build-depends:
        base >=4.9 && <5,
        bytestring -any,
        containers >=0.5.11,
        array -any,
        mtl -any,
        transformers -any,
        deepseq -any
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

test-suite language-plutus-napkin-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Wnoncanonical-monad-instances
    build-depends:
        base -any,
        language-plutus-napkin -any,
        tasty -any,
        hedgehog -any,
        tasty-hedgehog -any
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

benchmark language-plutus-napkin-bench
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    hs-source-dirs: bench
    default-language: Haskell2010
    other-extensions: OverloadedStrings
    ghc-options: -O3 -Wall -Wincomplete-uni-patterns
                 -Wincomplete-record-updates -Wredundant-constraints
                 -Wnoncanonical-monad-instances
    build-depends:
        base -any,
        language-plutus-napkin -any,
        criterion -any,
        bytestring -any
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
