cabal-version: 2.0
name: marlowe-actus
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type: Simple
maintainer: dmytro.kondratiuk@iohk.io
stability: experimental
author: Dmytro Kondratiuk
synopsis:
  Marlowe ACTUS: financial contracts on Cardano Computation Layer
description:
  A reference implementation of Marlowe, domain-specific language targeted at
  the execution of financial contracts in the style of Peyton Jones et al
  on Cardano Computation Layer.
category: Language
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/plutus

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

library
  hs-source-dirs: src
  build-depends:
    aeson -any,
    base -any,
    bytestring,
    containers -any,
    deriving-aeson -any,
    mtl,
    newtype-generics,
    template-haskell -any,
    plutus-tx -any,
    plutus-emulator -any,
    plutus-ledger,
    marlowe -any,
    text,
    vector,
    wl-pprint -any,
    freer-simple -any,
    time -any
  default-language: Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables
                      DeriveGeneric StandaloneDeriving DeriveLift
                      DeriveFunctor DeriveFoldable
                      DeriveTraversable
  exposed-modules:
    Language.Marlowe.ACTUS.MarloweCompat
    Language.Marlowe.ACTUS.Ops
    Language.Marlowe.ACTUS.BusinessEvents
    Language.Marlowe.ACTUS.ContractTerms
    Language.Marlowe.ACTUS.ActusValidator
    Language.Marlowe.ACTUS.ContractState
    Language.Marlowe.ACTUS.Control
    Language.Marlowe.ACTUS.ControlLp
    Language.Marlowe.ACTUS.ProjectedCashFlows
    Language.Marlowe.ACTUS.Schedule
    Language.Marlowe.ACTUS.POF.PayoffSpec
    Language.Marlowe.ACTUS.POF.Payoff
    Language.Marlowe.ACTUS.POF.PayoffLp
    Language.Marlowe.ACTUS.STF.StateTransitionSpec
    Language.Marlowe.ACTUS.STF.StateTransition
    Language.Marlowe.ACTUS.STF.StateTransitionLp
    Language.Marlowe.ACTUS.SCHED.ContractScheduleSpec
    Language.Marlowe.ACTUS.SCHED.ContractSchedule
    Language.Marlowe.ACTUS.INIT.StateInitializationSpec
    Language.Marlowe.ACTUS.INIT.StateInitialization
    Language.Marlowe.ACTUS.Utility.DateShift
    Language.Marlowe.ACTUS.Utility.ScheduleGenerator
    Language.Marlowe.ACTUS.Utility.YearFraction
    Language.Marlowe.ACTUS.Utility.Annuity
    Language.Marlowe.ACTUS.Utility.ContractRoleSign
  other-modules:
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -pgmL unlit -optL--ghc -optL--language=haskell -optL--from=asciidoc

  build-tool-depends: unlit:unlit -any

test-suite marlowe-actus-test
    default-language: Haskell2010
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
      -- Spec.Common
        Spec.Marlowe.Actus
      -- Spec.Actus
    build-depends:
        aeson -any,
        base >=4.9 && <5,
        containers -any,
        hedgehog -any,
        lens -any,
        memory -any,
            time -any,
        bytestring -any,
        freer-simple -any,
        tasty -any,
        tasty-hunit -any,
        tasty-hedgehog >=0.2.0.0,
        text -any,
        serialise,
        cborg,
        plutus-ledger -any,
        plutus-emulator -any,
        marlowe,
        marlowe-actus,
        plutus-tx -any,
        template-haskell -any
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
