cabal-version:   3.0
cabal-version:   3.0
name:            marlowe-cardano-minimal
version:         0.1.0.3
license:         Apache-2.0
license-files:
  LICENSE
  NOTICE

build-type:      Simple
maintainer:      brian.bush@iohk.io
stability:       experimental
author:          Brian Bush
synopsis:        Marlowe: financial contracts on Cardano Computation Layer
description:
  A reference implementation of Marlowe, domain-specific language targeted at
  the execution of financial contracts in the style of Peyton Jones et al
  on Cardano Computation Layer.

category:        Language
extra-doc-files: README.md
data-dir:        benchmarks
data-files:
  rolepayout/*.benchmark
  semantics/*.benchmark

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Werror

library
  import:          lang

  if impl(ghc <9.0)
    buildable: False

  hs-source-dirs:  src
  build-depends:
    , base
    , bytestring
    , cardano-crypto-class  >=2.0.0.1 && <2.2
    , newtype-generics
    , plutus-core           ^>=1.7
    , plutus-ledger-api
    , plutus-tx             ^>=1.7
    , plutus-tx-plugin      ^>=1.7

  exposed-modules:
    Language.Marlowe.Core.V1.Semantics
    Language.Marlowe.Core.V1.Semantics.Types
    Language.Marlowe.Core.V1.Semantics.Types.Address
    Language.Marlowe.Scripts.RolePayout
    Language.Marlowe.Scripts.Semantics

executable marlowe-validators
  import:           lang
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:
    Benchmark.Marlowe
    Benchmark.Marlowe.RolePayout
    Benchmark.Marlowe.Semantics
    Benchmark.Marlowe.Types
    Benchmark.Marlowe.Util
    Paths_marlowe_cardano_minimal

  if impl(ghc <9.0)
    buildable: False

  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , directory
    , filepath
    , marlowe-cardano-minimal
    , mtl
    , plutus-core:{plutus-core, plutus-core-execlib}  ^>=1.7
    , plutus-ledger-api
    , plutus-tx                                       ^>=1.7
    , serialise
